es-exporter.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: es-exporter
  namespace: monitoring
  labels:
    k8s-app: es-exporter
    version: v1
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: es-exporter
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: es-exporter
        k8s-app: es-exporter
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccountName: es-exporter
      containers:
        #- command: ["sleep"]
        #  args: ["infinity"]
        - command: ["/scripts/run.sh"]
          image: docker.io/fedora:27
          imagePullPolicy: IfNotPresent
          name: es-exporter
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /es-exporter
              name: config-volume
            - mountPath: /data
              name: data-volume
            - mountPath: /scripts
              name: runsh
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data-volume
          emptyDir: {}
        - name: config-volume
          configMap:
            name: es-exporter-config
        - name: runsh
          configMap:
            name: runsh
            defaultMode: 0744
---
apiVersion: v1
kind: Service
metadata:
  name: es-exporter
  namespace: monitoring
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: es-exporter
