heapster.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: heapster
  namespace: kube-system
  labels:
    k8s-addon: monitoring-standalone.addons.k8s.io
    k8s-app: heapster
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    version: v1.7.0
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: heapster
      version: v1.7.0
  template:
    metadata:
      labels:
        k8s-app: heapster
        version: v1.7.0
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      serviceAccountName: heapster
      containers:
        - image: gcr.io/google_containers/heapster:v1.5.0
          name: heapster
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 180
            timeoutSeconds: 5
          resources:
            # keep request = limit to keep this container in guaranteed class
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          command:
            - /heapster
            - --source=kubernetes.summary_api:''
            # Configure the ES sink
            # You'll need to use your own credentials and DB hostname
            # - --sink=elasticsearch:?nodes=http://elasticsearch.default:9200&esUserName=admin&esUserSecret=changeme&sniff=false&maxRetries=3
            - --sink=influxdb:http://influxdb.default:8086
        - image: gcr.io/google_containers/addon-resizer:2.0
          name: heapster-nanny
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 100Mi
          command:
            - /pod_nanny
            - --cpu=80m
            - --extra-cpu=0.5m
            - --memory=140Mi
            - --extra-memory=4Mi
            - --deployment=heapster
            - --container=heapster
            - --poll-period=300000
      tolerations:
        - key: "CriticalAddonsOnly"
          operator: "Exists"
---
apiVersion: v1
kind: Service
metadata:
  name: heapster
  namespace: kube-system
  labels:
    k8s-addon: monitoring-standalone.addons.k8s.io
    kubernetes.io/name: "Heapster"
    kubernetes.io/cluster-service: "true"
spec:
  ports:
    - port: 80
      targetPort: 8082
  selector:
    k8s-app: heapster
---
