influxdb.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: influxdb
  namespace: default
  labels:
    k8s-app: influxdb
    version: v1
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: influxdb
      version: v1
  template:
    metadata:
      labels:
        k8s-app: influxdb
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccountName: influxdb
#      affinity:
# Make sure you have labelled the worker nodes with kubectl label nodes nodename role=worker-node
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#            - matchExpressions:
#              - key: role
#                operator: In
#                values:
#                - worker-node
      volumes:
        - name: influxdbdata
          persistentVolumeClaim:
            claimName: influxdb-data-claim
        - name: influxdbmeta
          persistentVolumeClaim:
            claimName: influxdb-meta-claim
      containers:
#        - image: docker.elastic.co/kibana/kibana-oss:6.1.0
        - image: influxdb:1.4
          name: influxdb
#          resources:
            # need more cpu upon initialization, therefore burstable class
#            limits:
#              cpu: 1000m
#            requests:
#              cpu: 100m
          ports:
            - containerPort: 8086
              name: influxdbport
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/influxdb/meta
              name: influxdbmeta
            - mountPath: /var/lib/influxdb/data
              name: influxdbdata
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: default
  labels:
    k8s-app: influxdb
    kubernetes.io/name: "InfluxDB"
spec:
  ports:
  - port: 8086
    protocol: TCP
    targetPort: influxdbport
  selector:
    k8s-app: influxdb
