grafana.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: default
  labels:
    k8s-app: grafana
    version: v1
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: grafana
      version: v1
  template:
    metadata:
      labels:
        k8s-app: grafana
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccountName: grafana
      volumes:
        - name: grafanadata
          persistentVolumeClaim:
            claimName: grafanadata-claim
      containers:
#        - image: docker.elastic.co/grafana/kibana-oss:6.1.0
        - image: grafana/grafana
          name: grafana
          resources:
            # need more cpu upon initialization, therefore burstable class
            limits:
              cpu: 300m
            requests:
              cpu: 100m
          ports:
            - containerPort: 3000
              name: grafanaport
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafanadata
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
  labels:
    k8s-app: grafana
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Kibana"
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: grafanaport
  selector:
    k8s-app: grafana
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: grafana.k8shc
    http:
      paths:
        - path: /
          backend:
            serviceName: grafana
            servicePort: 3000
