kibana.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: default
  labels:
    k8s-app: kibana
    version: v1
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana
      version: v1
  template:
    metadata:
      labels:
        k8s-app: kibana
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccountName: kibana
      containers:
        - image: docker.elastic.co/kibana/kibana-oss:6.1.1
#        - image: localhost/kibana-logtrail:6.1.1
          name: kibana
          resources:
            # need more cpu upon initialization, therefore burstable class
            limits:
              cpu: 300m
            requests:
              cpu: 100m
          ports:
            - containerPort: 5601
              name: kibanaport
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: default
  labels:
    k8s-app: kibana
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Kibana"
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: kibanaport
  selector:
    k8s-app: kibana
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ui
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: kibana.k8shc
    http:
      paths:
        - path: /
          backend:
            serviceName: kibana
            servicePort: 5601
