kubernetes-dashboard.yaml
---
# ------------------- Dashboard Role & Role Binding ------------------- #

#kind: Role
#apiVersion: rbac.authorization.k8s.io/v1
#metadata:
#  name: kubernetes-dashboard-minimal
#  namespace: kube-system
#rules:
#  # Allow Dashboard to create 'kubernetes-dashboard-key-holder' secret.
#- apiGroups: [""]
#  resources: ["secrets"]
#  verbs: ["create"]
#  # Allow Dashboard to create 'kubernetes-dashboard-settings' config map.
#- apiGroups: [""]
#  resources: ["configmaps"]
#  verbs: ["create"]
#  # Allow Dashboard to get, update and delete Dashboard exclusive secrets.
#- apiGroups: [""]
#  resources: ["secrets"]
#  resourceNames: ["kubernetes-dashboard-key-holder"]
#  verbs: ["get", "update", "delete"]
#  # Allow Dashboard to get and update 'kubernetes-dashboard-settings' config map.
#- apiGroups: [""]
#  resources: ["configmaps"]
#  resourceNames: ["kubernetes-dashboard-settings"]
#  verbs: ["get", "update"]
#  # Allow Dashboard to get metrics from heapster.
#- apiGroups: [""]
#  resources: ["services"]
#  resourceNames: ["heapster"]
#  verbs: ["proxy"]
#- apiGroups: [""]
#  resources: ["services/proxy"]
#  resourceNames: ["heapster", "http:heapster:", "https:heapster:"]
#  verbs: ["get"]

#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: RoleBinding
#metadata:
#  name: kubernetes-dashboard-minimal
#  namespace: kube-system
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: Role
#  name: kubernetes-dashboard-minimal
#subjects:
#- kind: ServiceAccount
#  name: kubernetes-dashboard
#  namespace: kube-system

---
# ------------------- Dashboard Deployment ------------------- #

kind: Deployment
apiVersion: apps/v1beta2
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: kubernetes-dashboard
  template:
    metadata:
      labels:
        k8s-app: kubernetes-dashboard
    spec:
      containers:
      - name: kubernetes-dashboard
        image: k8s.gcr.io/kubernetes-dashboard-amd64:v1.8.2
        ports:
        - containerPort: 9090
          protocol: TCP
        args:
          # Uncomment the following line to manually specify Kubernetes API server Host
          # If not specified, Dashboard will attempt to auto discover the API server and connect
          # to it. Uncomment only if the default does not work.
          # - --apiserver-host=http://my-address:port
        volumeMounts:
          # Create on-disk volume to store exec logs
        - mountPath: /tmp
          name: tmp-volume
        livenessProbe:
          httpGet:
            path: /
            port: 9090
          initialDelaySeconds: 30
          timeoutSeconds: 30
      volumes:
      - name: tmp-volume
        emptyDir: {}
      serviceAccountName: kubernetes-dashboard
      # Comment the following tolerations if Dashboard must not be deployed on master
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule

---
# ------------------- Dashboard Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  ports:
  - port: 80
    targetPort: 9090
  selector:
    k8s-app: kubernetes-dashboard
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-dash
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: k8sdashboard.k8shc
    http:
      paths:
        - path: /
          backend:
            serviceName: kubernetes-dashboard
            servicePort: 80
