prometheus-operator-rook.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: prometheus-operator
  name: prometheus-operator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: prometheus-operator
    spec:
      containers:
      - args:
        - --kubelet-service=kube-system/kubelet
        - --config-reloader-image=quay.io/coreos/configmap-reload:v0.0.1
        image: quay.io/coreos/prometheus-operator:v0.16.1
        name: prometheus-operator
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      serviceAccountName: prometheus-operator
---
apiVersion: v1
kind: Service
metadata:
  name: rook-prometheus
  namespace: rook
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    prometheus: rook-prometheus
  type: NodePort
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-prometheus-ui
  namespace: rook
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: rook-prometheus.k8shc
    http:
      paths:
        - path: /
          backend:
            serviceName: rook-prometheus
            servicePort: 9090
