unsee.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: unsee
  namespace: monitoring
  labels:
    k8s-app: unsee
    version: v1
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: unsee
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: unsee
        k8s-app: unsee
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccountName: unsee
      containers:
        - env:
            - name: ALERTMANAGER_URIS
              value: "default:http://alertmanager:9093"
            - name: LOG_LEVEL
              value: "error"
          image: docker.io/cloudflare/unsee:v0.8.0
          imagePullPolicy: IfNotPresent
          name: unsee
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: unsee
  namespace: monitoring
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: unsee
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: unsee
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: unsee.k8shc
    http:
      paths:
        - path: /
          backend:
            serviceName: unsee
            servicePort: 8080
