weavescope-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weavescope-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: scope.k8shc
    http:
      paths:
        - path: /
          backend:
            serviceName: weave-scope-app
            servicePort: 80
